// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Checkbox 1`] = `
<div
  className="MuiFormControl-root"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <legend
    className="MuiFormLabel-root"
  >
    text
  </legend>
  <div
    className="MuiFormGroup-root"
  />
</div>
`;

exports[`Form Number 1`] = `
<div
  className="MuiFormControl-root"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
      data-shrink={true}
    >
      text
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        name="text"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="number"
      />
    </div>
  </div>
</div>
`;

exports[`Form Radio 1`] = `
<div
  className="MuiFormControl-root"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <legend
    className="MuiFormLabel-root"
  >
    text
  </legend>
  <div
    aria-label="text"
    className="MuiFormGroup-root"
    role="radiogroup"
  />
</div>
`;

exports[`Form Switch 1`] = `
<div
  className="MuiFormControl-root"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <label
    className="MuiFormControlLabel-root"
  >
    <span
      className="MuiSwitch-root"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiSwitch-switchBase MuiSwitch-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <input
            className="PrivateSwitchBase-input-4 MuiSwitch-input"
            disabled={false}
            name="text"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-track"
      />
    </span>
    <span
      className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
    >
      text
    </span>
  </label>
</div>
`;

exports[`Form Text 1`] = `
<div
  className="MuiFormControl-root"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
      data-shrink={true}
    >
      text
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        name="text"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Form Tree 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg"
>
  <div
    style={
      Object {
        "border": "1px transparent solid",
      }
    }
  >
    <div>
      <div
        className="makeStyles-root-8"
        style={
          Object {
            "paddingLeft": 0,
          }
        }
      >
        <div
          className="makeStyles-root-12"
          onClick={[Function]}
        >
          <span
            className="MuiTypography-root makeStyles-nodeTitle-13 MuiTypography-caption MuiTypography-colorTextSecondary"
            style={
              Object {
                "visibility": "hidden",
              }
            }
          >
            test
          </span>
        </div>
        <div
          className="MuiPaper-root makeStyles-node-9 MuiPaper-outlined MuiPaper-rounded"
        >
          <div
            className="MuiBox-root MuiBox-root-14"
          >
            <h6
              className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary"
            >
              test
            </h6>
            <div />
          </div>
        </div>
        <div
          className="MuiCollapse-container MuiCollapse-hidden"
          style={
            Object {
              "minHeight": "0px",
            }
          }
        >
          <div
            className="MuiCollapse-wrapper"
          >
            <div
              className="MuiCollapse-wrapperInner"
            />
          </div>
        </div>
      </div>
      <hr
        className="MuiDivider-root"
      />
    </div>
  </div>
</div>
`;
